--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -56,10 +56,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200502_143812.jpg" alt="picture 1"
-										width="380" height="214">
+										width="380" height="213">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/rvUfekJhyeg"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;"
@@ -94,10 +94,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200606_144801.jpg" alt="picture 2"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/7m_yRTn9wws"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -132,10 +132,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200502_163430.jpg" alt="picture 3"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/pN3UDBZmSZ0"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -168,10 +168,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200502_163432.jpg" alt="picture 4"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/SCaYHUfW81g"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -205,10 +205,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200509_145051.jpg" alt="picture 5"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/UZoBfp89G8U"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -243,10 +243,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200509_145054.jpg" alt="picture 6"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/ToOBDQI8eFg"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -281,10 +281,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200509_173912.jpg" alt="picture 7"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/BrhKehtXrFA"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -318,10 +318,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200509_163756.jpg" alt="picture 8"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/Pkd46M8AuWI"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -355,10 +355,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200516_144207.jpg" alt="picture 9"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/kFto3sXBovE"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -391,10 +391,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200516_144210.jpg" alt="picture 10"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/uXr3qv9wgU8"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -423,10 +423,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200516_162528.jpg" alt="picture 11"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/6EqVGz5_NK0"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -455,10 +455,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200516_162530.jpg" alt="picture 12"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/FBtL0BaVpNg"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -490,10 +490,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200523_143557.jpg" alt="picture 1"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/kS-Cap2p9mw"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -524,10 +524,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200523_151850.jpg" alt="picture 1"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/KTVxZUqyixk"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -558,10 +558,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200523_172610.jpg" alt="picture 1"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/9xG6Hl4FSpk"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -597,10 +597,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200530_144453.jpg" alt="picture 1"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/wYxwqqSUrQY"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -633,10 +633,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200530_144457.jpg" alt="picture 1"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/IwSp8nJ-gnk"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -668,10 +668,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200530_164014.jpg" alt="picture 1"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/7zZs6GJnORE"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -705,10 +705,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/380_20200530_164018.jpg" alt="picture 1"
-										width="380" height="214" align="center">
+										width="380" height="213" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="214"
+									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/wpQQTapwE_o"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -740,35 +740,21 @@
 							<h1 style="text-align: center;">준비&재료손질</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/380_20200530_164018.jpg" alt="picture 1"
-										width="380" height="214" align="center">
-								</div>
-								<div id="youtube">
 									<iframe width="380" height="213"
 										src="https://www.youtube.com/embed/Z8v9ZolM4G0"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 										allowfullscreen></iframe>
 								</div>
+								<div id="youtube">
+									<iframe width="380" height="213"
+										src="https://www.youtube.com/embed/lE7heRZwaSQ"
+										frameborder="0"
+										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+										allowfullscreen></iframe>
+								</div>
 							</div>
-							<ol>
-								<li>가쓰오다시 1/2C - 도사스 : 가쓰오다시 2T, 간장 1T, 설탕 1T, 식초 1T - 살짝
-									끓여 식히기.</li>
-								<li>오이: 자바라 - 소금물 - 2~3cm로 썰기.</li>
-								<li>미역: 찬물에 불린 후 데치기 - 참물에 헹군 후 김발에 말기 - 4~5cm로 썰기.</li>
-								<li>문어: 간장 & 식초 물에 데침 - 물결 모양.</li>
-								<li>레몬: 반달모양 슬라이스.</li>
-								<li>완성접시에 오이, 미영, 문어, 레몬 답고 도사스 뿌려 마무리.</li>
-								<br />* 시간 없음
-								<br />
-								<br />
-								<h3>요구사항</h3>
-								<br />가. 가다랑어국물을 만들어 양념초간장(도사스)을 만드시오.
-								<br />나. 문어는 삶아 4~5cm 길이로 물결모양썰기(하조기리)를 하시오.
-								<br />다. 미역은 손질하여 4~5cm 정도 크기로 사용하시오.
-								<br />라. 오이는 둥글게 썰거나 줄무늬(자바라) 썰기 하여 사용하시오.
-								<br />마. 문어초회 접시에 오이와 문어를 담고 양념초간장(도사스)을 끼얹어 레몬으로 장식하시오.
-							</ol>
+
 						</section>
 						<hr />
 					</div>
