--- a/src/main/resources/templates/navigation/worldmap.html
+++ b/src/main/resources/templates/navigation/worldmap.html
@@ -81,7 +81,9 @@
 				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco
 					laboris nisi ut aliquip ex ea commodo consequat.</p>
 				<section id="map_section">
-					<article id="main_article">
+					<figure id="usamap_image" class="float_top">
+					</figure>
+					<article id="main_article" class="float_bottom">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							Aenean imperdiet, lacus non tristique volutpat, metus dolor
 							varius dolor, eu venenatis justo lacus id ligula. Suspendisse
@@ -122,8 +124,7 @@
 						</p>
 						<p>Converted SVG to JSON & Used random color by JavaScript.</p>
 					</article>
-					<figure id="usamap_image">
-					</figure>
+
 				</section>
 			</div>
 			<div id="menu3" class="tab-pane fade">
@@ -172,7 +173,8 @@
 						</p>
 						<p>Converted SVG to JSON & Used random color by JavaScript.</p>
 					</article>
-					<figure id="canadamap_image">
+					
+					<figure id="koreamap_image">
 					</figure>
 				</section>
 			</div>
