--- a/src/main/resources/templates/navigation/worldmap.html
+++ b/src/main/resources/templates/navigation/worldmap.html
@@ -132,7 +132,9 @@
 				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco
 					laboris nisi ut aliquip ex ea commodo consequat.</p>
 				<section id="map_section">
-					<article id="main_article">
+					<figure id="canadamap_image" class = "float_top">
+					</figure>
+					<article id="main_article" class = "float_bottom">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							Aenean imperdiet, lacus non tristique volutpat, metus dolor
 							varius dolor, eu venenatis justo lacus id ligula. Suspendisse
@@ -173,9 +175,6 @@
 						</p>
 						<p>Converted SVG to JSON & Used random color by JavaScript.</p>
 					</article>
-					
-					<figure id="koreamap_image">
-					</figure>
 				</section>
 			</div>
 		</div>
