--- a/src/main/resources/templates/navigation/worldmap.html
+++ b/src/main/resources/templates/navigation/worldmap.html
@@ -132,7 +132,7 @@
 				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco
 					laboris nisi ut aliquip ex ea commodo consequat.</p>
 				<section id="map_section">
-					<figure id="canadamap_image" class = "float_top">
+					<figure id="usamap_image" class = "float_top">
 					</figure>
 					<article id="main_article" class = "float_bottom">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
