--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -90,7 +90,7 @@
 						data-placement="top" title="Can make Accout">Sign Up</a></li>
 					{{/sessionedUser}} {{#sessionedUser}}
 					<li><a href="/users/logout" role="button">Log Out</a></li>
-					<li><a href="/users/{{id}}/f;orm" role="button">Information
+					<li><a href="/users/{{id}}/form" role="button">Information
 							Update</a></li> {{/sessionedUser}}
 				</ul>
 			</div>
