--- a/src/main/resources/templates/navigation/worldmap.html
+++ b/src/main/resources/templates/navigation/worldmap.html
@@ -25,6 +25,8 @@
 				<h3>HOME</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
 					do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<figure id="worldmap_image">
+				</figure>
 			</div>
 			<div id="menu1" class="tab-pane fade">
 				<h3>South Korea Map</h3>
