--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -219,11 +219,10 @@
 								<li>다시물 / 쑥갓: 찬물.</li>
 								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 꼬리 V자 성형, 몸통 세장뜨기, 머리 2등분 -
 									소금 - 생선 데치기.</li>
-								<li>무: 은행잎&야꾸미 / 당근: 매화 / 죽순:빗살 편 / 배추&쑥갓말이 / 표고: 별모양 / 두부:
-									직사각형.</li>
+								<li>무: 은행잎모양 & 야꾸미갈기 / 당근: 매화 / 죽순:빗살 편썰기 / 배추&쑥갓말이 / 표고: 별모양 / 두부: 직사각형.</li>
+								<li>폰즈 = 다시물1T+간장1T+식초1T.</li>
 								<li>야꾸미 = 무(오로시, 간것+고추가루), 실파송송, 레몬 슬라이스.</li>
-								<li>폰즈 = 다시물, 식초, 간장 각각 1T.</li>
-								<li>청주 알코올 날리기 + 다시물 + 소금 - 완성접시에 재료 세팅 후 중탕(10분정도) - 쑥갓
+								<li>다시물2C + 청주2C + 소금 - 완성접시에 재료 세팅 후 중탕(10분정도) - 쑥갓
 									올려제출(야꾸미, 폰즈 함께 제출).</li>
 								<br />* 순서를 잘 기억하고 최적화 해둬야 함(시간 모자름).
 								<br />
@@ -254,14 +253,12 @@
 								</div>
 							</div>
 							<ol>
-								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
-									가쓰오부시를 위에 넣어두고 8분간 우린다 그 후에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를
-									만든다.</li>
-								<li>폰즈 = 가쓰오다시 + 간장 + 식초 각각 1T씩.</li>
+								<li>가쓰오다시: 다시물+가쓰오부시</li>
+								<li>폰즈 = 가쓰오다시1T + 간장1T + 식초1T.</li>
 								<li>야꾸미 = 무(오로시, 간것+고추가루), 실파송송, 레몬 슬라이스.</li>
-								<li>오이: 자바라기리 - 소금물 - 2~3Cm 성형.</li>
-								<li>미역: 불린 후 데쳐 미역말이 - 4Cm 성형.</li>
-								<li>해삼: 입과 항문 자르고 중앙(배쪽) 잘라서 내장, 힘줄 제거 - 1Cm 두께로 성형.</li>
+								<li>오이: 자바라 - 소금물 - 2~3cm 성형.</li>
+								<li>미역: 불린 후 데쳐 미역말이 - 4cm 성형.</li>
+								<li>해삼: 입과 항문 자르고 중앙(배쪽) 잘라서 내장, 힘줄 제거 - 1cm 두께로 성형.</li>
 								<li>완성접시에 오이, 미역, 야꾸미, 해삼 놓고 폰즈 뿌려 마무리.</li>
 								<br />* 숙지 또 숙지.
 								<br />
