--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -290,11 +290,11 @@
 							</div>
 							<ol>
 								<li>도미손질: 도미머리 2등분 - 소금 - 데침.</li>
-								<li>대파 4~5Cm 채 -찬물.</li>
-								<li>죽순-편썰어 데침.</li>
+								<li>대파: 4~5cm 채 - 찬물.</li>
+								<li>죽순: 편썰어 데침.</li>
 								<li>레몬: 오리발.</li>
 								<li>물 2C + 다시마 + 도미머리 + - 끓으면 다시마 제거, 불순물 제거 - 면보에 육수 걸러
-									간장약간, 청주약간, 소금.</li>
+									간장1/3t+청주1t+소금1/3t.</li>
 								<li>도미머리, 육수, 오리발, 대파, 올려 제출.</li>
 								<br />* 숙지 또 숙지
 								<br />
