--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -326,14 +326,13 @@
 								</div>
 							</div>
 							<ol>
-								<li>다시물 1C.</li>
-								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 머리 2등분, 몸통과 꼬리 5Cm, 꼬리 V자 성형
-									- 소금, 데치기.</li>
+								<li>다시물.</li>
+								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 꼬리 V자 성형, 몸통 세장뜨기, 머리 2등분 -
+									소금 - 생선 데치기.</li>
 								<li>생강: 하리쇼가(얇게 채) - 찬물 / 꽈리고추 : 꼭지 제거.</li>
 								<li>우엉: 나무젓가락 굵기 - 찬물(갈변방지).</li>
-								<li>양념장: 다시물 1C, 간장, 설탕, 청주, 미림 각 3T 씩.</li>
-								<li>냄비에 우엉, 도미 + 양념장 2/3C 뚜껑 또는 호일 - 졸이기- 1/3C 양념장 넣고
-									꽈리고추(색 변하지 않게 주의) 넣어 윤기나게 졸이기.</li>
+								<li>양념장: 다시물 1C+간장3T+청주3T+미림3T+설탕3T.</li>
+								<li>냄비에 우엉+도미+양념장 뚜껑 - 졸이기- 꽈리고추(30초) 넣어 윤기나게 졸이기.</li>
 								<li>완성접시에 도미 올리고, 우엉, 꽈리고추, 생강 올려 마무리.</li>
 								<br />* 시간 없음
 								<br />
@@ -363,14 +362,14 @@
 								</div>
 							</div>
 							<ol>
-								<li>깻잎: 찬물 / 배합초 : 식초 3T, 설탕 2T, 소금 1t - 밥에 넣어 코팅.</li>
-								<li>생강: 얇게 편썰어 데친 후 배합초 절임 -> 장미모양.</li>
+								<li>깻잎: 찬물 / 배합초: 식초 3T+설탕 2T+소금 1t - 밥에 넣어 코팅.</li>
+								<li>생강: 얇게 편썰어  배합초 절임 -> 장미모양.</li>
 								<li>오이: 사방 1cm + 소금 - 행군 후 물기 제거.</li>
-								<li>박고지: 불린 후 데치기 - 간장 2T+설탕 2T+미림2T+물1/2C,.</li>
-								<li>달걀: 설탕1/2t+맛술1t+소금1/4t - 체 - 달걀말이 후 사방 1cm</li>
-								<li>김 구운 후 함김 식히기 - 김에 밥 2/3정도 펼친 후 재료(오보로,오이,계란,박고지) 넣고 밥
+								<li>박고지: 불린 후 데치기 - 간장1T+미림1T+설탕 1T.</li>
+								<li>달걀: 체 - 달걀말이 후 사방 1cm</li>
+								<li>김에 밥 2/3정도 펼친 후 재료(오보로,오이,계란,박고지) 넣고 밥
 									끝과 끝이 만나도록 말아주기 - 일정하게 8등분으로 썰기.</li>
-								<li>깻잎(5각형). 생강(장미) 올리고 김초밥 올려서 마무리.(+간장종지)</li>
+								<li>깻잎(성형). 생강(장미) 올리고 김초밥 올려서 마무리.(+간장종지)</li>
 								<br />* 시간 없음
 								<br />
 								<br />
