--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -400,9 +400,9 @@
 							<ol>
 								<li>조개: 소금물 해감 / 쑥갓: 찬물.</li>
 								<li>레몬: 오리발.</li>
-								<li>물 2C + 다시마 + 조개 - 끓기 시작하면 다시마 제거 -불순물 제거.</li>
+								<li>물 2C+간장+청주+소금+다시마+조개 - 끓기 시작하면 다시마 제거 -불순물 제거.</li>
 								<li>조게 입벌리면 건져 껍데기 한쪽 제거 - 완성접시에 담기.</li>
-								<li>면보에 육수 거른 후 간장, 청주, 소금 간하고 다시 끓여서 완성 접시 담기.</li>
+								<li>면보에 육수 거른 후 붓기.</li>
 								<li>쑥갓 레몬 올려 마무리.</li>
 								<br />* 시간 여유 있음(쌩큐 아이템)
 								<br />
@@ -431,11 +431,11 @@
 							</div>
 							<ol>
 								<li>깻잎, 무순: 찬물.</li>
-								<li>갑오징어: 0.3cm로 두깨로 포 뜬 후 채 - 50도 청주물에 데치기.</li>
+								<li>갑오징어: 0.3cm로 두께로 포 뜬 후 채 - 중탕 청주물에 데치기.</li>
 								<li>명란젓: 알.</li>
 								<li>오징어 + 명란젓 = 3 : 1 (매화색) - 버무리기.</li>
 								<li>10시 깻잎 깔고 갑오징어무침 담고 무순 올려 마무리.</li>
-								<br />* 시간 많음
+								<br />* 갑오징어가 많이 익지 않도록 해야한다
 								<br />
 								<br />
 								<h3>요구사항</h3>
