--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -40,6 +40,9 @@
 						<li class="active"><a href="#food_no18">삼치소금구이</a></li>
 						<li class="active"><a href="#food_no19">문어초회</a></li>
 						<li class="active"><a href="#food_no20">준비&재료손질</a></li>
+						<li class="active"><a href="#food_no21">대합술찜&소고기덮밥(06/22-부산)</a></li>
+						<li class="active"><a href="#food_no21">소고기간장구이&메밀국수(10/16-서울)</a></li>
+
 					</ul>
 				</div>
 
@@ -219,7 +222,8 @@
 								<li>다시물 / 쑥갓: 찬물.</li>
 								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 꼬리 V자 성형, 몸통 세장뜨기, 머리 2등분 -
 									소금 - 생선 데치기.</li>
-								<li>무: 은행잎모양 & 야꾸미갈기 / 당근: 매화 / 죽순:빗살 편썰기 / 배추&쑥갓말이 / 표고: 별모양 / 두부: 직사각형.</li>
+								<li>무: 은행잎모양 & 야꾸미갈기 / 당근: 매화 / 죽순:빗살 편썰기 / 배추&쑥갓말이 / 표고:
+									별모양 / 두부: 직사각형.</li>
 								<li>폰즈 = 다시물1T+간장1T+식초1T.</li>
 								<li>야꾸미 = 무(오로시, 간것+고추가루), 실파송송, 레몬 슬라이스.</li>
 								<li>다시물2C + 청주2C + 소금 - 완성접시에 재료 세팅 후 중탕(10분정도) - 쑥갓
@@ -363,12 +367,12 @@
 							</div>
 							<ol>
 								<li>깻잎: 찬물 / 배합초: 식초 3T+설탕 2T+소금 1t - 밥에 넣어 코팅.</li>
-								<li>생강: 얇게 편썰어  배합초 절임 -> 장미모양.</li>
+								<li>생강: 얇게 편썰어 배합초 절임 -> 장미모양.</li>
 								<li>오이: 사방 1cm + 소금 - 행군 후 물기 제거.</li>
 								<li>박고지: 불린 후 데치기 - 간장1T+미림1T+설탕 1T.</li>
 								<li>달걀: 체 - 달걀말이 후 사방 1cm</li>
-								<li>김에 밥 2/3정도 펼친 후 재료(오보로,오이,계란,박고지) 넣고 밥
-									끝과 끝이 만나도록 말아주기 - 일정하게 8등분으로 썰기.</li>
+								<li>김에 밥 2/3정도 펼친 후 재료(오보로,오이,계란,박고지) 넣고 밥 끝과 끝이 만나도록 말아주기
+									- 일정하게 8등분으로 썰기.</li>
 								<li>깻잎(성형). 생강(장미) 올리고 김초밥 올려서 마무리.(+간장종지)</li>
 								<br />* 시간 없음
 								<br />
@@ -464,11 +468,10 @@
 							<ol>
 								<li>숙주: 거두절미.</li>
 								<li>양파, 피망, 당근, 표고 : 4cm 채.</li>
-								<li>새우: 내장 껍질 제거.</li>
+								<li>새우: 내장 껍질 제거 데치기.</li>
 								<li>오징어: 솔방울 무늬: 4cm*1cm 데치기.</li>
 								<li>끓는물에 면 삶아 찬물에 살짝 행굼.</li>
-								<li>팬-식용유 - 양파,당근,표고,새우,오징어-면-청주, 미림, 간장 각 1T 씩 - 청피망, 숙주,
-									참기름 - 접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
+								<li>팬-식용유-양파,당근,표고,피망,숙주,새우,오징어,면+야끼소바소스(청주1T+미림1T+간장 1T)+참기름 - 접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
 								<br />* 시간 없음
 								<br />
 								<br />
@@ -750,7 +753,27 @@
 										allowfullscreen></iframe>
 								</div>
 							</div>
-
+						</section>
+						<hr />
+						<section id="food_no21" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+							<br /> <br /> <br />
+							<h1 style="text-align: center;">기출문제(대합술찜&소고기덮밥/소고기간장구이&메밀국수)</h1>
+							<div id="wrap">
+								<div id="image">
+									<iframe width="380" height="213"
+										src="https://www.youtube.com/embed/u-a2ELVMd2E"
+										frameborder="0"
+										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+										allowfullscreen></iframe>
+								</div>
+								<div id="youtube">
+									<iframe width="380" height="213"
+										src="https://www.youtube.com/embed/_4wAuvrfVig"
+										frameborder="0"
+										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+										allowfullscreen></iframe>
+								</div>
+							</div>
 						</section>
 						<hr />
 					</div>
