--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -500,7 +500,7 @@
 								</div>
 							</div>
 							<ol>
-								<li>다시물 1/2C.</li>
+								<li>다시물.</li>
 								<li>다래소스: 다시물4T + 간장 2T + 설탕 2T + 청주 2T + 맛술 2T - 윤기나고 걸죽하게
 									조리기.</li>
 								<li>깻잎: 찬물 - 성형 / 생강: 하리쇼가 - 찬물.</li>
