--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -532,15 +532,13 @@
 								</div>
 							</div>
 							<ol>
-								<li>가쓰오다시 2C.</li>
-								<li>미역: 불린 후 데치기(많이 불리면 안 데쳐도 됨) - 1~2cm 성형.</li>
+								<li>가쓰오다시.</li>
+								<li>미역: 1cm 성형 후 데치기.</li>
 								<li>두부: 사방 1cm 후 데치기.</li>
 								<li>실파: 송송.</li>
-								<li>냄비에 가쓰오다시 2C - 끓으면 된장 1T + 청주 1T - 불순물 제거 - 두부 토렴(살짝
-									데치기).</li>
-								<li>완성 접시에 두부, 미역 담고 육수 그릇의 8부 담고 실파, 산초가루 올려 마무리.</li>
+								<li>가쓰오다시 2C+ 된장 1T + 청주 1T - 끓이면서 불순물 제거</li>
+								<li>완성 접시에 두부+미역 담고 육수 그릇의 8부 담고 실파, 산초가루 올려 마무리.</li>
 								<br />* 시간 많음
-								<br />
 								<br />
 								<h3>요구사항</h3>
 								<br />가. 다시마와 가다랑어포(가쓰오부시)로 가다랑어국물(가쓰오다시)을 만드시오.
