--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -366,8 +366,8 @@
 								</div>
 							</div>
 							<ol>
-								<li>깻잎: 찬물 / 배합초: 식초 3T+설탕 2T+소금 1t - 밥에 넣어 코팅.</li>
-								<li>생강: 얇게 편썰어 배합초 절임 -> 장미모양.</li>
+								<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
+								<li>깻잎: 찬물 / 생강: 편썰어 배합초 - 장미.</li>
 								<li>오이: 사방 1cm + 소금 - 행군 후 물기 제거.</li>
 								<li>박고지: 불린 후 데치기 - 간장1T+미림1T+설탕 1T.</li>
 								<li>달걀: 체 - 달걀말이 후 사방 1cm</li>
@@ -565,7 +565,7 @@
 							</div>
 							<ol>
 								<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
-								<li>깻잎: 찬물 / 생강: 편썰어 데쳐 배합초 - 장미 / 와사비: 물과 동량.</li>
+								<li>깻잎: 찬물 / 생강: 편썰어 배합초 - 장미 / 와사비: 물과 동량.</li>
 								<li>새우: 머리,내장, 물총 제거 후 꼬치 꽂아 삶아서 껍질 제거 후 반으로 펼침.</li>
 								<li>문어: 간장 & 식초 물에 데침 - 물결 모양.</li>
 								<li>참치: 소금물 - 7*3*0.5cm 직사각형.</li>
