--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -603,8 +603,8 @@
 								</div>
 							</div>
 							<ol>
-								<li>가쓰오다시 1/2C(빨리식히기).</li>
-								<li>가쓰오다시 3T, 맛술 1T, 설탕 1T, 소금 1/2t. + 계란 체에 거르기.</li>
+								<li>가쓰오다시.</li>
+								<li>가쓰오다시 3T+맛술 1T+설탕 1T+소금 1/2t. + 계란 체에 거르기.</li>
 								<li>무: 강판에 갈아서 물기 제거 - 간장.</li>
 								<li>팬에 기름 두르고 달걀말이 후 김발에 모양 잡기 - 길이 8cm, 높이 2.5cm, 두께 1cm로
 									썰기.</li>
