--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -642,12 +642,9 @@
 								<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
 								<li>깻잎: 찬물 / 생강: 편썰어 데쳐 배합초 - 장미 / 와사비: 물과 동량.</li>
 								<li>참치: 소금물 해동 - 사방 1cm 성형 후 면보.</li>
-								<li>와사비: 물과 동량(되직하게).</li>
-								<li>김 - 반으로 잘라 구운 후 식혀 봉지에 보관 - 밥을 3/4정도 일정하게 펼친 후 와사비 넣고
+								<li>김 - 반으로 잘라 구운 후  밥을 3/4정도 일정하게 펼친 후 와사비 넣고
 									참치 올려 말기 - 12등분.</li>
 								<li>완성 접시에 깻잎, 생강 참치김초밥 올려 마무리 + 간장종지.</li>
-								<br />* 시간 없음
-								<br />
 								<br />
 								<h3>요구사항</h3>
 								<br />가. 김을 반장으로 자르고, 눅눅하거나 구어지지 않은 김은 구워 사용하시오.
