--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -671,16 +671,13 @@
 								</div>
 							</div>
 							<ol>
-								<li>다시물 1C.</li>
-								<li>삼치: 3장뜨기 - X자 칼집 - 소금 -수분제거 -쇠꼬챙이에 끼워 익히기.</li>
-								<li>무: 3*3*3cm, 0.2cm 간격으로 칼집(국화꽃모양) - 다시물 3T, 설탕 1T, 식초
-									1T, 소금 소량에 절이기.</li>
-								<li>우엉: 껍질제거 - 5*0.5*0.5cm - 냄비(식용유) 볶기 - 조림장( 1/2C, 간장 1T,
-									설탕 1T, 맛술 1T, 청주 1T) 넣고 윤기나게 졸이기 - 양끝에 깨 묻히기.</li>
+								<li>다시물.</li>
+								<li>삼치: 3장뜨기 - X자 칼집 - 소금 - 수분제거 -쇠꼬챙이에 끼워 익히기.</li>
+								<li>무: 3*3*3cm, 0.2cm 간격으로 칼집(국화꽃모양) - 다시물 3T + 식초1T + 소금 소량에 절이기.</li>
+								<li>우엉: 껍질제거 - 5*0.5*0.5cm - 냄비(식용유) 볶기 - 조림장( 1/2C+간장 1T+청주 1T+맛술1T+설탕1T) 넣고 윤기나게 졸이기 - 양끝에 깨 묻히기.</li>
 								<li>레몬: 웨지 모양 + 레몬껍질 다지기(국화꽃 수술).</li>
 								<li>깻잎, 삼치, 레몬 웨지, 무(국화꽃+레몬껍질), 우엉 담아 마무리.</li>
 								<br />* 시간 없음
-								<br />
 								<br />
 								<h3>요구사항</h3>
 								<br />가. 삼치는 세장뜨기한 후 소금을 뿌려 10~20분 후 씻고 쇠꼬챙이에 끼워 구워내시오.
