--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -705,13 +705,13 @@
 								</div>
 							</div>
 							<ol>
-								<li>가쓰오다시 1/2C - 도사스 : 가쓰오다시 2T, 간장 1T, 설탕 1T, 식초 1T - 살짝
-									끓여 식히기.</li>
+								<li>가쓰오다시</li>
+								<li>도사스 : 가쓰오다시 2T+간장 1T+설탕 1T+식초 1T - 살짝 끓여 식히기.</li>
 								<li>오이: 자바라 - 소금물 - 2~3cm로 썰기.</li>
 								<li>미역: 찬물에 불린 후 데치기 - 참물에 헹군 후 김발에 말기 - 4~5cm로 썰기.</li>
-								<li>문어: 간장 & 식초 물에 데침 - 물결 모양.</li>
+								<li>문어: 데침 - 물결 모양.</li>
 								<li>레몬: 반달모양 슬라이스.</li>
-								<li>완성접시에 오이, 미영, 문어, 레몬 답고 도사스 뿌려 마무리.</li>
+								<li>완성접시에 오이, 미역, 문어, 레몬 답고 도사스 뿌려 마무리.</li>
 								<br />* 시간 없음
 								<br />
 								<br />
