--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -70,12 +70,12 @@
 								</div>
 							</div>
 							<ol>
-								<li>가쓰오다시: 다시물+가쓰오부시.</li>
-								<li>돈부리다시: 가쓰오다시 1/2C+간장1T+맛술1T+설탕1t+소금약간.</li>
+								<li>가쓰오다시.</li>
+								<li><b>돈부리다시: 가쓰오다시 1/2C+간장1T+맛술1T+설탕1t+소금약간.</b></li>
 								<li>양파, 팽이버섯, 실파 : 각각 4cm.</li>
 								<li>소고기 : 결반대로 얇게 편썰기 1*3*0.2cm. - Tip: 편썰고 길이를 끝 잘라서 맞추기.</li>
 								<li>김 : 가늘게 채(하리노리) / 달걀 풀어두기.</li>
-								<li>오믈렛 프라이팬에 돈부리다시 넣고 - 끓으면 고기 -> 양파, 팽이 -> 실파 -> 계란
+								<li>오믈렛 프라이팬에 돈부리다시 넣고 - 끓으면 고기 -> 양파, 팽이, 실파 -> 계란
 									80%정도익혀 밥에 올리기 - 김채 올려 마무리.</li>
 								<br />* 맛술(미림)과 청주의 차이: 맛술은 청주에 비해 달고 윤기와 광택을 내어준다.(맛술을 졸이면
 								시럽처럼 된다. 그래서 조림에 많이 쓴다)
@@ -109,9 +109,9 @@
 							</div>
 
 							<ol>
-								<li>가쓰오다시: 다시물+가쓰오부시</li>
-								<li>소바다시 : 가쓰오다시 1C+간장3T+맛술1T+청주1T+설탕2T 살짝 끓인후 바로 얼음에 물에
-									식힌다.</li>
+								<li>가쓰오다시.</li>
+								<li><b>소바다시 : 가쓰오다시 1C+간장3T+맛술1T+청주1T+설탕2T 살짝 끓인후 바로 얼음에 물에
+									식힌다.</b></li>
 								<li>무 : 후지산 모양 / 실파: 송송 / 와사비: 물과동량(나뭇잎모양).</li>
 								<li>메밀면: 심지 없을 때까지 삶아 얼음물에 식힘(사리 2개)</li>
 								<li>김발 위에 사리 2개, 하리노리 - 김채 + 야꾸미, 소바다시 제출.</li>
@@ -182,13 +182,13 @@
 								</div>
 							</div>
 							<ol>
-								<li>가쓰오다시 1/2C / 쑥갓 : 찬물 / 레몬 : 오리발 / 표고 별모양 내기 / 은행 끓는 물에
+								<li>가쓰오다시  / 쑥갓 : 찬물 / 레몬 : 오리발 / 표고 별모양 내기 / 은행 끓는 물에
 									데쳐서 까두기.</li>
 								<li>죽순, 찜어묵, 밤(직화로 꼬치에 넣어 굽기) : 사방 1Cm.</li>
 								<li>생선 : 사방 1cm-소금 / 닭가슴살 : 사방 1cm-간장.</li>
 								<li>데치기 : 새우, 생선살, 닭가슴살, 은행, 죽순.</li>
 								<li>새우:껍질벗기고 고명 / 은행:껍질 벗기고 고명</li>
-								<li>달걀물: 달걀1개, 가쓰오다시1/2C+청주1t+맛술1t+소금 - 체</li>
+								<li><b>달걀물: 달걀1개, 가쓰오다시1/2C+맛술1t+청주1t+소금 - 체</b></li>
 								<li>냄비에 중탕으로 달걀찜 (재료 다 넣기) 14분 정도 찐 후에 새우, 오리발, 쑥갓, 찜어묵 올려서
 									제출한다 제출한다.</li>
 								<br />* 달걀찜은 부드럽게 익혀서 제출해야함.
@@ -224,7 +224,7 @@
 									소금 - 생선 데치기.</li>
 								<li>무: 은행잎모양 & 야꾸미갈기 / 당근: 매화 / 죽순:빗살 편썰기 / 배추&쑥갓말이 / 표고:
 									별모양 / 두부: 직사각형.</li>
-								<li>폰즈 = 다시물1T+간장1T+식초1T.</li>
+								<li><b>폰즈 = 다시물1T+간장1T+식초1T.</b></li>
 								<li>야꾸미 = 무(오로시, 간것+고추가루), 실파송송, 레몬 슬라이스.</li>
 								<li>다시물2C + 청주2C + 소금 - 완성접시에 재료 세팅 후 중탕(10분정도) - 쑥갓
 									올려제출(야꾸미, 폰즈 함께 제출).</li>
@@ -258,7 +258,7 @@
 							</div>
 							<ol>
 								<li>가쓰오다시: 다시물+가쓰오부시</li>
-								<li>폰즈 = 가쓰오다시1T + 간장1T + 식초1T.</li>
+								<li><b>폰즈 = 가쓰오다시1T + 간장1T + 식초1T.</b></li>
 								<li>야꾸미 = 무(오로시, 간것+고추가루), 실파송송, 레몬 슬라이스.</li>
 								<li>오이: 자바라 - 소금물 - 2~3cm 성형.</li>
 								<li>미역: 불린 후 데쳐 미역말이 - 4cm 성형.</li>
@@ -335,7 +335,7 @@
 									소금 - 생선 데치기.</li>
 								<li>생강: 하리쇼가(얇게 채) - 찬물 / 꽈리고추 : 꼭지 제거.</li>
 								<li>우엉: 나무젓가락 굵기 - 찬물(갈변방지).</li>
-								<li>양념장: 다시물 1C+간장3T+청주3T+미림3T+설탕3T.</li>
+								<li><b>양념장: 다시물 1C+간장3T+청주3T+미림3T+설탕3T.</b></li>
 								<li>냄비에 우엉+도미+양념장 뚜껑 - 졸이기- 꽈리고추(30초) 넣어 윤기나게 졸이기.</li>
 								<li>완성접시에 도미 올리고, 우엉, 꽈리고추, 생강 올려 마무리.</li>
 								<br />* 시간 없음
@@ -366,10 +366,10 @@
 								</div>
 							</div>
 							<ol>
-								<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
+								<li><b>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</b></li>
 								<li>깻잎: 찬물 / 생강: 편썰어 배합초 - 장미.</li>
 								<li>오이: 사방 1cm + 소금 - 행군 후 물기 제거.</li>
-								<li>박고지: 불린 후 데치기 - 간장1T+미림1T+설탕 1T.</li>
+								<li>박고지: 불린 후 데치기 - <b>간장1T+미림1T+설탕 1T.</b></li>
 								<li>달걀: 체 - 달걀말이 후 사방 1cm</li>
 								<li>김에 밥 2/3정도 펼친 후 재료(오보로,오이,계란,박고지) 넣고 밥 끝과 끝이 만나도록 말아주기
 									- 일정하게 8등분으로 썰기.</li>
@@ -471,7 +471,7 @@
 								<li>새우: 내장 껍질 제거 데치기.</li>
 								<li>오징어: 솔방울 무늬: 4cm*1cm 데치기.</li>
 								<li>끓는물에 면 삶아 찬물에 살짝 행굼.</li>
-								<li>팬-식용유-양파,당근,표고,피망,숙주,새우,오징어,면+야끼소바소스(청주1T+미림1T+간장 1T)+참기름 - 접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
+								<li>팬-식용유-양파,당근,표고,피망,숙주,새우,오징어,면+<b>야끼소바소스(간장1T+맛술1T+청주1T)</b>>+참기름 - 접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
 								<br />* 시간 없음
 								<br />
 								<br />
@@ -501,8 +501,8 @@
 							</div>
 							<ol>
 								<li>다시물.</li>
-								<li>다래소스: 다시물4T + 간장 2T + 설탕 2T + 청주 2T + 맛술 2T - 윤기나고 걸죽하게
-									조리기.</li>
+								<li><b>다래소스: 다시물4T + 간장 2T + 설탕 2T + 청주 2T + 맛술 2T - 윤기나고 걸죽하게
+									조리기.</b></li>
 								<li>깻잎: 찬물 - 성형 / 생강: 하리쇼가 - 찬물.</li>
 								<li>소고기: 핏물, 기름기 제거 후 연육 - 소금, 후추.</li>
 								<li>팬에 기름 두르고 살짝 구운 후 다래소스 발라가며 굽기 + 미디엄.</li>
@@ -536,7 +536,7 @@
 								<li>미역: 1cm 성형 후 데치기.</li>
 								<li>두부: 사방 1cm 후 데치기.</li>
 								<li>실파: 송송.</li>
-								<li>가쓰오다시 2C+ 된장 1T + 청주 1T - 끓이면서 불순물 제거</li>
+								<li><b>가쓰오다시 2C+ 된장 1T + 청주 1T</b> - 끓이면서 불순물 제거</li>
 								<li>완성 접시에 두부+미역 담고 육수 그릇의 8부 담고 실파, 산초가루 올려 마무리.</li>
 								<br />* 시간 많음
 								<br />
@@ -564,7 +564,7 @@
 								</div>
 							</div>
 							<ol>
-								<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
+								<li><b>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</b></li>
 								<li>깻잎: 찬물 / 생강: 편썰어 배합초 - 장미 / 와사비: 물과 동량.</li>
 								<li>새우: 머리,내장, 물총 제거 후 꼬치 꽂아 데친 후 껍질 제거 후 반으로 펼침.</li>
 								<li>문어: 물에 데침 - 물결 모양.</li>
@@ -604,7 +604,7 @@
 							</div>
 							<ol>
 								<li>가쓰오다시.</li>
-								<li>가쓰오다시 3T+맛술 1T+설탕 1T+소금 1/2t. + 계란 체에 거르기.</li>
+								<li><b>가쓰오다시 3T+맛술 1T+설탕 1T+소금 1/2t. + 계란 체에 거르기.</b></li>
 								<li>무: 강판에 갈아서 물기 제거 - 간장.</li>
 								<li>팬에 기름 두르고 달걀말이 후 김발에 모양 잡기 - 길이 8cm, 높이 2.5cm, 두께 1cm로
 									썰기.</li>
@@ -639,7 +639,7 @@
 								</div>
 							</div>
 							<ol>
-								<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
+								<li><b>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</b></li>
 								<li>깻잎: 찬물 / 생강: 편썰어 데쳐 배합초 - 장미 / 와사비: 물과 동량.</li>
 								<li>참치: 소금물 해동 - 사방 1cm 성형 후 면보.</li>
 								<li>김 - 반으로 잘라 구운 후  밥을 3/4정도 일정하게 펼친 후 와사비 넣고
@@ -706,7 +706,7 @@
 							</div>
 							<ol>
 								<li>가쓰오다시</li>
-								<li>도사스 : 가쓰오다시 2T+간장 1T+설탕 1T+식초 1T - 살짝 끓여 식히기.</li>
+								<li><b>도사스 : 가쓰오다시 2T+간장 1T+설탕 1T+식초 1T - 살짝 끓여 식히기.</b></li>
 								<li>오이: 자바라 - 소금물 - 2~3cm로 썰기.</li>
 								<li>미역: 찬물에 불린 후 데치기 - 참물에 헹군 후 김발에 말기 - 4~5cm로 썰기.</li>
 								<li>문어: 데침 - 물결 모양.</li>
