--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -185,9 +185,9 @@
 								<li>죽순, 찜어묵, 밤(직화로 꼬치에 넣어 굽기) : 사방 1Cm.</li>
 								<li>생선 : 사방 1cm-소금 / 닭가슴살 : 사방 1cm-간장.</li>
 								<li>데치기 : 새우, 생선살, 닭가슴살, 은행, 죽순.</li>
-								<li>새우:껍질벗기고 고명 / 은행:껍질 벗기고 고명</li>
+								<li>새우: 껍질벗기고 고명 / 은행: 껍질 벗기고 고명</li>
 								<li><b>달걀물: 달걀1개, 가쓰오다시1/2C+맛술1t+청주1t+소금 - 체</b></li>
-								<li>냄비에 중탕으로 달걀찜 (재료 다 넣기) 14분 정도 찐 후에 새우, 오리발, 쑥갓, 찜어묵 올려서
+								<li>냄비에 중탕으로 달걀찜 (재료 다 넣기) 14분 정도 찐 후에 새우, 찜어묵, 오리발, 쑥갓 올려서
 									제출한다 제출한다.</li>
 								<br />* 달걀찜은 부드럽게 익혀서 제출해야함.
 								<br />* 접시와 면포로 감싸야 수시로 확인 가능
