--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -224,7 +224,7 @@
 									별모양 / 두부: 직사각형.</li>
 								<li><b>폰즈 = 다시물1T+간장1T+식초1T.</b></li>
 								<li>야꾸미 = 무(오로시, 간것+고추가루), 실파송송, 레몬 슬라이스.</li>
-								<li>다시물2C + 청주2C + 소금 - 완성접시에 재료 세팅 후 중탕(10분정도) - 쑥갓
+								<li><b>다시물2C + 청주2C + 소금</b> - 완성접시에 재료 세팅 후 중탕(10분정도) - 쑥갓
 									올려제출(야꾸미, 폰즈 함께 제출).</li>
 								<br />* 순서를 잘 기억하고 최적화 해둬야 함(시간 모자름).
 								<br />
