--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -255,7 +255,7 @@
 								</div>
 							</div>
 							<ol>
-								<li>가쓰오다시: 다시물+가쓰오부시</li>
+								<li>가쓰오다시</li>
 								<li><b>폰즈 = 가쓰오다시1T + 간장1T + 식초1T.</b></li>
 								<li>야꾸미 = 무(오로시, 간것+고추가루), 실파송송, 레몬 슬라이스.</li>
 								<li>오이: 자바라 - 소금물 - 2~3cm 성형.</li>
