--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -405,7 +405,7 @@
 								<li>물 2C+간장+청주+소금+다시마+조개 - 끓기 시작하면 다시마 제거 -불순물 제거.</li>
 								<li>조게 입벌리면 건져 껍데기 한쪽 제거 - 완성접시에 담기.</li>
 								<li>면보에 육수 거른 후 붓기.</li>
-								<li>쑥갓 레몬 올려 마무리.</li>
+								<li>쑥갓 오리발 올려 마무리.</li>
 								<br />* 시간 여유 있음(쌩큐 아이템)
 								<br />
 								<br />
