--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -646,7 +646,7 @@
 								<br />
 								<h3>요구사항</h3>
 								<br />가. 김을 반장으로 자르고, 눅눅하거나 구어지지 않은 김은 구워 사용하시오.
-								<br />나. 고추냉이와 초생각을 만드시오.
+								<br />나. 고추냉이와 초생강을 만드시오.
 								<br />다. 초밥 2줄은 일정한 크기 12개로 잘라 내시오.
 								<br />라. 간장을 곁들여 내시오.
 							</ol>
