--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -71,7 +71,7 @@
 							</div>
 							<ol>
 								<li>가쓰오다시.</li>
-								<li><b>돈부리다시: 가쓰오다시 1/2C+간장1T+맛술1T+설탕1t+소금약간.</b></li>
+								<li><b>돈부리다시: 가쓰오다시 1/2C+간장1T+맛술1T+설탕1T+소금약간.</b></li>
 								<li>양파, 팽이버섯, 실파 : 각각 4cm.</li>
 								<li>소고기 : 결반대로 얇게 편썰기 1*3*0.2cm. - Tip: 편썰고 길이를 끝 잘라서 맞추기.</li>
 								<li>김 : 가늘게 채(하리노리) / 달걀 풀어두기.</li>
@@ -110,7 +110,7 @@
 
 							<ol>
 								<li>가쓰오다시.</li>
-								<li><b>소바다시 : 가쓰오다시 1C+간장3T+맛술1T+청주1T+설탕2T 살짝 끓인후 바로 얼음에 물에
+								<li><b>소바다시 : 가쓰오다시 1C+간장3T+맛술1T+청주1T+설탕1T 살짝 끓인후 바로 얼음에 물에
 									식힌다.</b></li>
 								<li>무 : 후지산 모양 / 실파: 송송 / 와사비: 물과동량(나뭇잎모양).</li>
 								<li>메밀면: 심지 없을 때까지 삶아 얼음물에 식힘(사리 2개)</li>
@@ -186,7 +186,7 @@
 								<li>생선 : 사방 1cm-소금 / 닭가슴살 : 사방 1cm-간장.</li>
 								<li>데치기 : 새우, 생선살, 닭가슴살, 은행, 죽순.</li>
 								<li>새우: 껍질벗기고 고명 / 은행: 껍질 벗기고 고명</li>
-								<li><b>달걀물: 달걀1개, 가쓰오다시1/2C+맛술1t+청주1t+소금 - 체</b></li>
+								<li><b>달걀물: 달걀1개, 가쓰오다시1/2C+맛술1T+청주1T+소금 - 체</b></li>
 								<li>냄비에 중탕으로 달걀찜 (재료 다 넣기) 14분 정도 찐 후에 새우, 찜어묵, 오리발, 쑥갓 올려서
 									제출한다 제출한다.</li>
 								<br />* 달걀찜은 부드럽게 익혀서 제출해야함.
@@ -295,9 +295,8 @@
 								<li>대파: 4~5cm 채 - 찬물.</li>
 								<li>죽순: 편썰어 데침.</li>
 								<li>레몬: 오리발.</li>
-								<li>물 2C + 다시마 + 도미머리 + - 끓으면 다시마 제거, 불순물 제거 - 면보에 육수 걸러
-									<b>간장1/3t+청주1t+소금1/3t.</b></li>
-								<li>도미머리, 육수, 오리발, 대파, 올려 제출.</li>
+								<li><b>다시마+물 2C+간장1/2+청주1/2+도미머리</b> - 끓으면 다시마 제거, 불순물 제거 - 면보에 육수 걸러</li>
+								<li>오리발, 도미머리, 대파 올려 제출.</li>
 								<br />* 숙지 또 숙지
 								<br />
 								<br />
@@ -402,10 +401,9 @@
 							<ol>
 								<li>조개: 소금물 해감 / 쑥갓: 찬물.</li>
 								<li>레몬: 오리발.</li>
-								<li>물 2C+간장+청주+소금+다시마+조개 - 끓기 시작하면 다시마 제거 -불순물 제거.</li>
+								<li><b>다시마+물 2C+간장1/2+청주1/2+조개</b> - 끓으면 다시마 제거, 불순물 제거 - 면보에 육수 걸러</li>
 								<li>조게 입벌리면 건져 껍데기 한쪽 제거 - 완성접시에 담기.</li>
-								<li>면보에 육수 거른 후 붓기.</li>
-								<li>쑥갓 오리발 올려 마무리.</li>
+								<li>오리발,조개,쑥갓 올려 제출.</li>
 								<br />* 시간 여유 있음(쌩큐 아이템)
 								<br />
 								<br />
