--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -332,7 +332,7 @@
 									소금 - 생선 데치기.</li>
 								<li>생강: 하리쇼가(얇게 채) - 찬물 / 꽈리고추 : 꼭지 제거.</li>
 								<li>우엉: 나무젓가락 굵기 - 찬물(갈변방지).</li>
-								<li><b>양념장: 다시물 1C+간장3T+청주3T+미림3T+설탕3T.</b></li>
+								<li><b>양념장: 다시물 1C+간장3T+청주3T+맛술3T+설탕3T.</b></li>
 								<li>냄비에 우엉+도미+양념장 뚜껑 - 졸이기- 꽈리고추(30초) 넣어 윤기나게 졸이기.</li>
 								<li>완성접시에 도미 올리고, 우엉, 꽈리고추, 생강 올려 마무리.</li>
 								<br />* 시간 없음
@@ -497,7 +497,7 @@
 							</div>
 							<ol>
 								<li>다시물.</li>
-								<li><b>다래소스: 다시물4T + 간장 2T + 설탕 2T + 청주 2T + 맛술 2T - 윤기나고 걸죽하게
+								<li><b>다래소스: 다시물1/2C+간장 2T+청주2T+맛술2T+설탕2T - 윤기나고 걸죽하게
 									조리기.</b></li>
 								<li>깻잎: 찬물 - 성형 / 생강: 하리쇼가 - 찬물.</li>
 								<li>소고기: 핏물, 기름기 제거 후 연육 - 소금, 후추.</li>
@@ -532,7 +532,7 @@
 								<li>미역: 1cm 성형 후 데치기.</li>
 								<li>두부: 사방 1cm 후 데치기.</li>
 								<li>실파: 송송.</li>
-								<li><b>가쓰오다시 2C+ 된장 1T + 청주 1T</b> - 끓이면서 불순물 제거</li>
+								<li><b>가쓰오다시 2C+된장 1T+청주 1T</b> - 끓이면서 불순물 제거</li>
 								<li>완성 접시에 두부+미역 담고 육수 그릇의 8부 담고 실파, 산초가루 올려 마무리.</li>
 								<br />* 시간 많음
 								<br />
