--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -224,7 +224,7 @@
 									별모양 / 두부: 직사각형.</li>
 								<li><b>폰즈 = 다시물1T+간장1T+식초1T.</b></li>
 								<li>야꾸미 = 무(오로시, 간것+고추가루), 실파송송, 레몬 슬라이스.</li>
-								<li><b>다시물2C + 청주2C + 소금</b> - 완성접시에 재료 세팅 후 중탕(10분정도) - 쑥갓
+								<li><b>다시물2T + 청주2T + 소금</b> - 완성접시에 재료 세팅 후 중탕(10분정도) - 쑥갓
 									올려제출(야꾸미, 폰즈 함께 제출).</li>
 								<br />* 순서를 잘 기억하고 최적화 해둬야 함(시간 모자름).
 								<br />
@@ -333,7 +333,7 @@
 								<li>생강: 하리쇼가(얇게 채) - 찬물 / 꽈리고추 : 꼭지 제거.</li>
 								<li>우엉: 나무젓가락 굵기 - 찬물(갈변방지).</li>
 								<li><b>양념장: 다시물 1C+간장3T+청주3T+맛술3T+설탕3T.</b></li>
-								<li>냄비에 우엉+도미+양념장 뚜껑 - 졸이기- 꽈리고추(30초) 넣어 윤기나게 졸이기.</li>
+								<li>냄비 양념장+우엉+도미 뚜껑 - 졸이기- 꽈리고추(30초) 넣어 윤기나게 졸이기.</li>
 								<li>완성접시에 도미 올리고, 우엉, 꽈리고추, 생강 올려 마무리.</li>
 								<br />* 시간 없음
 								<br />
@@ -366,7 +366,7 @@
 								<li><b>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</b></li>
 								<li>깻잎: 찬물 / 생강: 편썰어 배합초 - 장미.</li>
 								<li>오이: 사방 1cm + 소금 - 행군 후 물기 제거.</li>
-								<li>박고지: 불린 후 데치기 - <b>간장1T+미림1T+설탕 1T.</b></li>
+								<li>박고지: 불린 후 데치기 - <b>간장1T+맛술1T+설탕 1T.</b></li>
 								<li>달걀: 체 - 달걀말이 후 사방 1cm</li>
 								<li>김에 밥 2/3정도 펼친 후 재료(오보로,오이,계란,박고지) 넣고 밥 끝과 끝이 만나도록 말아주기
 									- 일정하게 8등분으로 썰기.</li>
@@ -704,10 +704,10 @@
 								<li>가쓰오다시</li>
 								<li><b>도사스 : 가쓰오다시 2T+간장 1T+설탕 1T+식초 1T - 살짝 끓여 식히기.</b></li>
 								<li>오이: 자바라 - 소금물 - 2~3cm로 썰기.</li>
-								<li>미역: 찬물에 불린 후 데치기 - 참물에 헹군 후 김발에 말기 - 4~5cm로 썰기.</li>
+								<li>미역: 찬물에 불린 후 데치기 - 찬물에 헹군 후 김발에 말기 - 4~5cm로 썰기.</li>
 								<li>문어: 데침 - 물결 모양.</li>
 								<li>레몬: 반달모양 슬라이스.</li>
-								<li>완성접시에 오이, 미역, 문어, 레몬 답고 도사스 뿌려 마무리.</li>
+								<li>완성접시에 오이, 미역, 문어, 레몬 담고 도사스 뿌려 마무리.</li>
 								<br />* 시간 없음
 								<br />
 								<br />
