--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -332,7 +332,7 @@
 									소금 - 생선 데치기.</li>
 								<li>생강: 하리쇼가(얇게 채) - 찬물 / 꽈리고추 : 꼭지 제거.</li>
 								<li>우엉: 나무젓가락 굵기 - 찬물(갈변방지).</li>
-								<li><b>양념장: 다시물 1C+간장3T+청주3T+맛술3T+설탕3T.</b></li>
+								<li><b>양념장: 다시물 1C+간장3T+맛술3T+청주3T+설탕3T.</b></li>
 								<li>냄비 양념장+우엉+도미 뚜껑 - 졸이기- 꽈리고추(30초) 넣어 윤기나게 졸이기.</li>
 								<li>완성접시에 도미 올리고, 우엉, 꽈리고추, 생강 올려 마무리.</li>
 								<br />* 시간 없음
