--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -497,7 +497,7 @@
 							</div>
 							<ol>
 								<li>다시물.</li>
-								<li><b>다래소스: 다시물1/2C+간장 2T+청주2T+맛술2T+설탕2T - 윤기나고 걸죽하게
+								<li><b>다래소스: 다시물1/2C+간장 2T+맛술T+청주2T+설탕2T - 윤기나고 걸죽하게
 									조리기.</b></li>
 								<li>깻잎: 찬물 - 성형 / 생강: 하리쇼가 - 찬물.</li>
 								<li>소고기: 핏물, 기름기 제거 후 연육 - 소금, 후추.</li>
@@ -670,7 +670,7 @@
 								<li>다시물.</li>
 								<li>삼치: 3장뜨기 - X자 칼집 - 소금 - 수분제거 -쇠꼬챙이에 끼워 익히기.</li>
 								<li>무: 3*3*3cm, 0.2cm 간격으로 칼집(국화꽃모양) - 다시물 3T + 식초1T + 소금 소량에 절이기.</li>
-								<li>우엉: 껍질제거 - 5*0.5*0.5cm - 냄비(식용유) 볶기 - <b>조림장( 1/2C+간장 1T+청주 1T+맛술1T+설탕1T)</b> 넣고 윤기나게 졸이기 - 양끝에 깨 묻히기.</li>
+								<li>우엉: 껍질제거 - 5*0.5*0.5cm - 냄비(식용유) 볶기 - <b>조림장( 1/2C+간장 1T+맛술 1T+청주1T+설탕1T)</b> 넣고 윤기나게 졸이기 - 양끝에 깨 묻히기.</li>
 								<li>레몬: 웨지 모양 + 레몬껍질 다지기(국화꽃 수술).</li>
 								<li>깻잎, 삼치, 레몬 웨지, 무(국화꽃+레몬껍질), 우엉 담아 마무리.</li>
 								<br />* 시간 없음
