--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -15,9 +15,9 @@
 			.tab-content.</p>
 		<ul class="nav nav-pills">
 			<li class="active"><a data-toggle="pill" href="#home">Home</a></li>
-			<li><a data-toggle="pill" href="#menu1">South Korea Map</a></li>
-			<li><a data-toggle="pill" href="#menu2">Canada Map</a></li>
-			<li><a data-toggle="pill" href="#menu3">USA Map</a></li>
+			<li><a data-toggle="pill" href="#menu1">API 1</a></li>
+			<li><a data-toggle="pill" href="#menu2">API 2</a></li>
+			<li><a data-toggle="pill" href="#menu3">API 3</a></li>
 		</ul>
 
 		<div class="tab-content">
@@ -25,8 +25,7 @@
 				<h3>HOME</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
 					do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-				<figure id="worldmap_image">
-				</figure>
+
 			</div>
 			<div id="menu1" class="tab-pane fade">
 				<h3>South Korea Map</h3>
