--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -28,7 +28,7 @@
 
 			</div>
 			<div id="menu1" class="tab-pane fade">
-				<h3>South Korea Map</h3>
+				<h3>API 1</h3>
 				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco
 					laboris nisi ut aliquip ex ea commodo consequat.</p>
 				<section id="map_section">
@@ -76,7 +76,7 @@
 				</section>
 			</div>
 			<div id="menu2" class="tab-pane fade">
-				<h3>Canada Map</h3>
+				<h3>API 2</h3>
 				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco
 					laboris nisi ut aliquip ex ea commodo consequat.</p>
 				<section id="map_section">
@@ -124,7 +124,7 @@
 				</section>
 			</div>
 			<div id="menu3" class="tab-pane fade">
-				<h3>USA Map</h3>
+				<h3>API 3</h3>
 				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco
 					laboris nisi ut aliquip ex ea commodo consequat.</p>
 				<section id="map_section">
