--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -14,6 +14,7 @@
 			headers : {"Authorization: KakaoAK e5e613251210cc286e07c17499ed3047"}
 		}).done(function(msg) {
 			alert("Data Saved: " + msg);
+			console.log.(mag);
 		});
 	</script>
 	{{> include/navigation}}
