--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -26,7 +26,9 @@
 				<h3>HOME</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
 					do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<article id = "api1"></article>						
 				<script>
+				
 		$.ajax({
 			method : "GET",
 			url: "https://dapi.kakao.com/v3/search/book?target=title",
@@ -36,8 +38,10 @@
 			//alert("Data Saved: " + msg);
 			console.log(msg.documents[0].title);
 			console.log(msg.documents[0].thumbnail);
-			$("p").append("<br /><br /> title: "+msg.documents[0].title);
-			$("p").append("<br /><br /> image: <img src='"+msg.documents[0].thumbnail+"'/>");
+			$("#api1").append("<br /><br /> title: "+msg.documents[0].title);
+			$("#api1").append("<br /><br /> image: <img src='"+msg.documents[0].thumbnail+"'/>");
+			$("#api1").append("<br /><br /> title: "+msg.documents[1].title);
+			$("#api1").append("<br /><br /> image: <img src='"+msg.documents[1].thumbnail+"'/>");
 		});
 	</script>
 
