--- a/src/main/resources/templates/navigation/api.html
+++ b/src/main/resources/templates/navigation/api.html
@@ -41,6 +41,10 @@
 			$("#api1").append("<br /><br /> image: <img src='"+msg.documents[1].thumbnail+"'/>");
 			$("#api1").append("<br /><br /> title: "+msg.documents[2].title);
 			$("#api1").append("<br /><br /> image: <img src='"+msg.documents[2].thumbnail+"'/>");
+			$("#api1").append("<br /><br /> title: "+msg.documents[3].title);
+			$("#api1").append("<br /><br /> image: <img src='"+msg.documents[3].thumbnail+"'/>");
+			$("#api1").append("<br /><br /> title: "+msg.documents[4].title);
+			$("#api1").append("<br /><br /> image: <img src='"+msg.documents[4].thumbnail+"'/>");
 		});
 	</script>
 
